<?xml version="1.0"?>
<package format="3">
  <name>ldlidar_stl_ros2</name>
  <version>0.0.2</version>
  <description>The ldlidar_stl_ros2 package</description>
  <maintainer email="support@ldrobot.com">SHENZHEN LDROBOT CO., LTD.</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sqlite3</depend>
  <depend>matplotlibcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
